--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -59,7 +59,7 @@ a {
 /*********************Heder Navbar*********************/
 /*********************Heder Navbar*********************/
 
-// .nav__menu,
+// // .nav__menu,
 // .nav-toggle-btn,
 // .btn {
 //     display: none;
@@ -180,6 +180,56 @@ a {
         }
     }
 
+    .menu {
+        position: absolute;
+        top: 88px;
+        left: 50%;
+        transform: translateX(-50%);
+        width: calc(100% - 30px);
+        background-color: $white;
+        padding-inline: 20px;
+        box-shadow: $shadow-1;
+        height: 0;
+        overflow: hidden;
+        visibility: hidden;
+        transition: $transition-1;
+
+        &__item {
+            padding: 10px 5px;
+        }
+
+        a {
+            color: $rich-black-fogra-29;
+            font-weight: $fw-500;
+            font-size: $fs-4;
+            font-family: $ff-rubik;
+            transition: $transition-1;
+
+            &:hover,
+            :focus {
+                color: $dark-orange;
+            }
+
+
+        }
+
+        &.active {
+            height: 236px;
+            visibility: visible;
+        }
+
+
+        &__list {
+            margin-block: 10px;
+        }
+
+        &__item:not(:last-child) {
+            border-block-end: 1px solid hsla(0, 0%, 0%, 0.04);
+        }
+    }
+
+
+
 
 }
 
@@ -193,4 +243,91 @@ a {
     100% {
         transform: translateY(100%);
     }
+}
+
+/////////Search Box/////////////////
+
+
+.search {
+
+    &__content {
+        position: fixed;
+        z-index: 5;
+        top: -60%;
+        left: 0;
+        width: 100%;
+        height: 110%;
+        background-color: $black_95;
+        padding-inline: 15px;
+        visibility: hidden;
+        opacity: 0;
+        transition: $transition-2 ;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+
+        &.active {
+            visibility: visible;
+            opacity: 1;
+            transform: translateY(50%);
+        }
+
+
+
+    }
+
+    &__form {
+        position: relative;
+        width: calc(100% + 30px);
+        max-width: 500px;
+
+        display: flex;
+        align-items: center;
+        cursor: pointer;
+
+
+        input {
+            color: $gainsboro;
+            font-size: 3rem;
+            padding: 20px 15px;
+            padding-inline-end: 70px;
+            background-color: $black_95;
+            border: none;
+
+            &::placeholder {
+                color: $spanish-gray;
+            }
+
+            &::-webkit-search-cancel-button {
+                display: none;
+            }
+        }
+
+        .search-submit {
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+            right: 15px;
+            color: $onyx;
+            font-size: 4rem;
+            transition: $transition-1;
+            border: none;
+            background-color: transparent;
+
+            i {
+                display: flex;
+
+            }
+
+            &:hover,
+            :focus {
+                color: $gainsboro;
+            }
+        }
+
+    }
+
+
+
 }
