--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -59,11 +59,10 @@ a {
 /*********************Heder Navbar*********************/
 /*********************Heder Navbar*********************/
 
-// // .nav__menu,
-// .nav-toggle-btn,
-// .btn {
-//     display: none;
-// }
+
+.btn {
+    display: none;
+}
 
 .header {
 
@@ -252,19 +251,19 @@ a {
 
     &__content {
         position: fixed;
-        z-index: 5;
         top: -60%;
         left: 0;
         width: 100%;
         height: 110%;
         background-color: $black_95;
+        display: flex;
+        justify-content: center;
+        align-items: center;
         padding-inline: 15px;
+        z-index: 5;
         visibility: hidden;
         opacity: 0;
-        transition: $transition-2 ;
-        display: flex;
-        align-items: center;
-        justify-content: center;
+        transition: $transition-2;
 
 
         &.active {
@@ -279,21 +278,33 @@ a {
 
     &__form {
         position: relative;
-        width: calc(100% + 30px);
         max-width: 500px;
+
 
         display: flex;
         align-items: center;
+        justify-content: center;
+
+
+
+
+
+
+
         cursor: pointer;
 
 
-        input {
+        .search-input {
             color: $gainsboro;
-            font-size: 3rem;
+            font-size: 2.6rem;
             padding: 20px 15px;
             padding-inline-end: 70px;
             background-color: $black_95;
             border: none;
+            width: 100%;
+            cursor: pointer;
+
+
 
             &::placeholder {
                 color: $spanish-gray;
@@ -302,29 +313,52 @@ a {
             &::-webkit-search-cancel-button {
                 display: none;
             }
+
+            &:focus {
+                outline: none;
+                border: 1px solid $dark-orange;
+            }
         }
 
         .search-submit {
+
+
             position: absolute;
+
             top: 50%;
             transform: translateY(-50%);
-            right: 15px;
+            right: 5px;
             color: $onyx;
             font-size: 4rem;
             transition: $transition-1;
+
             border: none;
+
             background-color: transparent;
+            display: flex;
 
-            i {
-                display: flex;
-
-            }
 
             &:hover,
             :focus {
                 color: $gainsboro;
             }
+
+
         }
+
+
+
+
+
+    }
+
+
+    .search-close-btn {
+        position: absolute;
+        inset: 0;
+        z-index: -2;
+        background-color: $black_95;
+        cursor: url("/assets/img/close.png"), auto;
 
     }
 
