--- a/src/parts/header.pug
+++ b/src/parts/header.pug
@@ -21,7 +21,7 @@ header.header(data-header='')
                 .header__btn-group
                         .search-btn(arial-lebel="Search" data-search-btn='')
                             i.icon__search.ri-search-line      
-                        .btn.btn-hover 
+                        .btn.btn--header
                             span Reservation   
                         .nav-toggle-btn(arial-lebel="Toggle Menu" data-menu-toggle-btn="") 
                             span.line.top 
