--- a/src/parts/head.pug
+++ b/src/parts/head.pug
@@ -3,5 +3,8 @@ head
     link(rel='preconnect', href='https://fonts.googleapis.com')
     link(rel='preconnect', href='https://fonts.gstatic.com', crossorigin='')
     link(href='https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css', rel='stylesheet')
+    link(rel='preconnect' href='https://fonts.googleapis.com')
+    link(rel='preconnect' href='https://fonts.gstatic.com' crossorigin='')
+    link(href='https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&family=Rubik:wght@400;500;600;700&family=Shadows+Into+Light&display=swap' rel='stylesheet')
     link(rel='stylesheet', href='/src/scss/bootstrap-grid.css')
     link(rel='stylesheet', href='/assets/css/main.min.css')
