--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -1,7 +1,3 @@
-ion-icon {
-    pointer-events: none;
-}
-
 address {
     font-style: normal;
 }
@@ -18,6 +14,8 @@ body {
     font-size: 1.6rem;
     line-height: 1.6;
     overflow-x: hidden;
+    box-sizing: border-box;
+    height: 1600px;
 
 }
 
@@ -55,20 +53,21 @@ a {
     background-color: $tangerine;
 }
 
-/*********************Heder Navbar*********************/
-/*********************Heder Navbar*********************/
-/*********************Heder Navbar*********************/
-
-
-.btn {
-    display: none;
+.container {
+    max-width: 1200px !important;
 }
+
+/*********************Heder Navbar*********************/
+/*********************Heder Navbar*********************/
+/*********************Heder Navbar*********************/
+
+
 
 .header {
 
 
     color: $white;
-    background-color: $champagne-pink;
+
 
     position: absolute;
     top: 0;
@@ -79,14 +78,59 @@ a {
     z-index: 4;
 
     &.active {
-        color: $rich-black-fogra-29;
-        background-color: $rich-black-fogra-29;
 
         position: fixed;
-        top: -86px;
-        background-color: $champagne-pink;
+        top: -100px;
+        background-color: $white;
         box-shadow: $shadow-1;
         animation: slideIn 0.5s ease-out forwards;
+
+
+
+        .header__logo {
+
+            a {
+                color: $black;
+            }
+        }
+
+        .search-btn {
+            i {
+                color: $black;
+
+            }
+        }
+
+        .nav-toggle-btn {
+            .line {
+                background-color: $black;
+            }
+        }
+
+        .menu a {
+            color: $black;
+        }
+
+        &:hover,
+        :focus {
+            color: black;
+            transform: $transition-2;
+
+            &::after {
+                position: absolute;
+                content: '';
+                background-color: $dark-orange;
+                width: 100%;
+                height: 3px;
+                bottom: -3px;
+                left: 0;
+
+
+            }
+
+
+        }
+
     }
 
     &__content {
@@ -97,7 +141,28 @@ a {
         align-items: center;
         justify-content: space-between;
         gap: 20px;
+
+        @include sm {
+            margin: 0 15px;
+        }
+
+        @include md {
+            margin: 0 20px;
+        }
+
+        @include lg {
+            margin: 0;
+        }
     }
+
+    .btn--header {
+        display: none;
+
+        @include sm {
+            display: flex;
+        }
+    }
+
 
 
 
@@ -127,8 +192,9 @@ a {
 
         .search-btn {
             i {
-                color: $onyx;
+                color: $champagne-pink;
                 font-size: 20px;
+                cursor: pointer;
             }
         }
 
@@ -140,12 +206,17 @@ a {
         display: grid;
         gap: 4px;
 
+        @include lg {
+            display: none;
+        }
+
         .line {
             width: 10px;
             height: 3px;
-            background-color: $onyx;
+            background-color: $champagne-pink;
             border-radius: 5px;
             transition: $transition-1;
+            cursor: pointer;
 
             &.middle {
                 width: 20px;
@@ -181,7 +252,7 @@ a {
 
     .menu {
         position: absolute;
-        top: 88px;
+        top: calc(100% + 1px);
         left: 50%;
         transform: translateX(-50%);
         width: calc(100% - 30px);
@@ -193,8 +264,23 @@ a {
         visibility: hidden;
         transition: $transition-1;
 
+
+        @include lg {
+            all: unset;
+            margin-inline-start: auto;
+
+
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+
+
         &__item {
             padding: 10px 5px;
+
+
         }
 
         a {
@@ -204,22 +290,64 @@ a {
             font-family: $ff-rubik;
             transition: $transition-1;
 
+            @include lg {
+                font-size: $fs-3;
+                color: $white;
+                position: relative;
+
+                &:hover,
+                :focus {
+                    color: unset;
+                    transform: $transition-2;
+
+                    &::after {
+                        position: absolute;
+                        content: '';
+                        background-color: $dark-orange;
+                        width: 100%;
+                        height: 3px;
+                        bottom: -3px;
+                        left: 0;
+
+
+                    }
+
+
+                }
+
+
+            }
+
             &:hover,
             :focus {
                 color: $dark-orange;
+                transform: $transition-1;
+
+
             }
 
 
         }
 
         &.active {
-            height: 236px;
+            height: auto;
             visibility: visible;
+
+            @include lg {
+                all: unset;
+                margin-inline-start: auto;
+            }
         }
 
 
         &__list {
             margin-block: 10px;
+
+            @include lg {
+                margin-block: 0;
+                display: flex;
+                gap: 20px;
+            }
         }
 
         &__item:not(:last-child) {
