--- a/src/parts/content.pug
+++ b/src/parts/content.pug
@@ -11,8 +11,5 @@
                         p.hero__p Food is any substance consumed to provide nutritional support for an organism.
                         .btn.btn--hero 
                             span book a table
-                     
-
-
-                    //- .hero__banner
-                    //-        img(src='assets/img/hero-banner.png' alt='Burger')
+                    .hero__banner
+                           img(src='assets/img/hero-banner.png' alt='Burger')
