problem img hero

--- a/src/parts/content.pug
+++ b/src/parts/content.pug
@@ -12,4 +12,8 @@
                         .btn.btn--hero 
                             span book a table
                     .hero__banner
-                           img(src='assets/img/hero-banner.png' alt='Burger')
+                            .banner__bg   
+                                 img(src='assets/img/hero-banner-bg.png' alt='Burger')
+                            .banner__img 
+                                 img(src='assets/img/hero-banner.png' alt='Burger')
+                    
