--- a/src/scss/components/_container.scss
+++ b/src/scss/components/_container.scss
@@ -10,56 +10,113 @@
     background-position: center;
     padding-block: 145px 60px;
     text-align: center;
+    position: relative;
+    overflow: hidden;
+
+
+
+
+    @include md {
+
+        &::after {
+            content: '';
+            position: absolute;
+            left: 0px;
+            bottom: 0;
+            width: 100%;
+            height: 100%;
+            background-image: url('/assets/img/hero-bg-shape.png');
+            z-index: 1;
+            background-repeat: no-repeat;
+            background-size: contain;
+            background-position: right bottom;
+            pointer-events: none;
+
+
+        }
+
+    }
+
+
+
+
+
+
 
 
     &__content {
         display: flex;
         justify-content: center;
         align-items: center;
-        max-width: 340px;
-        margin-inline: auto;
+        position: relative;
+
+
+
 
 
 
         @include sm {
-            max-width: 400px;
-            padding: 0 15px;
-            align-self: center;
+            margin: 0 15px;
         }
-
 
         @include md {
-            position: relative;
-            text-align: left;
-            overflow: hidden;
-            z-index: 1;
-            margin-top: 25px;
-            margin-inline: 0;
-
-            padding: 0 20px;
+            margin: 0 20px;
+            align-items: flex-start;
+            justify-content: flex-start;
         }
 
-        // @include lg {
-        //     padding: 0;
-        // }
-
-
+        @include lg {
+            margin: 0;
+        }
 
     }
 
+
     &__banner {
+
         display: none;
+
+
+
+
 
 
         @include md {
             display: block;
-            position: absolute;
-            top: calc(50% + 86px);
-            transform: translateY(-50%);
+            z-index: 2;
+
+            .banner__img {
+                position: absolute;
+                bottom: -45px;
+                right: 0px;
+
+
+                width: 340px;
+
+
+                img {
+                    width: 100%;
+
+                }
+            }
+
+            .banner__bg {
+                position: absolute;
+                bottom: -18px;
+                right: 30px;
+
+                width: 300px;
+
+
+                img {
+                    width: 100%;
+
+                }
+            }
         }
-
-
     }
+
+
 
     &__text {
 
@@ -67,10 +124,16 @@
         gap: 30px;
         flex-direction: column;
         align-items: center;
-        background-color: yellowgreen;
+
+        max-width: 340px;
+
 
         @include md {
             align-items: flex-start;
+            text-align: left;
+            max-width: 400px;
+
+
         }
 
 
