hero section finish

--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -152,6 +152,15 @@ a {
 
         @include lg {
             margin: 0;
+
+
+
+        }
+
+
+        @include xl {
+            width: calc(100% + 30px);
+
         }
     }
 
