--- a/src/scss/components/_container.scss
+++ b/src/scss/components/_container.scss
@@ -13,29 +13,62 @@
     position: relative;
     overflow: hidden;
 
+    @include lg {
+        padding-top: 165px;
+    }
 
-
-
-    @include md {
-
-        &::after {
-            content: '';
-            position: absolute;
-            left: 0px;
-            bottom: 0;
-            width: 100%;
-            height: 100%;
-            background-image: url('/assets/img/hero-bg-shape.png');
-            z-index: 1;
-            background-repeat: no-repeat;
-            background-size: contain;
-            background-position: right bottom;
-            pointer-events: none;
-
-
-        }
+    @include xl {
+        padding-top: 185px;
 
     }
+
+
+
+
+
+    &::after {
+        content: '';
+        position: absolute;
+        left: 0px;
+        bottom: 0;
+        width: 100%;
+        height: 100%;
+        background-image: url('/assets/img/hero-bg-shape.png');
+        z-index: 1;
+        background-repeat: no-repeat;
+        background-size: contain;
+        background-position: right bottom;
+        pointer-events: none;
+        opacity: 0;
+
+
+        @include md {
+            opacity: 1;
+        }
+
+        @include xl {
+            background-size: auto;
+            left: 130px;
+        }
+
+        @include xxl {
+            left: 130px;
+        }
+
+        @include dsm {
+            left: 0px;
+        }
+
+
+
+    }
+
+
+
+
+
+
+
 
 
 
@@ -69,6 +102,12 @@
             margin: 0;
         }
 
+
+        @include xl {
+            width: calc(100% + 30px);
+
+        }
+
     }
 
 
@@ -85,18 +124,40 @@
             display: block;
             z-index: 2;
 
+
+
             .banner__img {
                 position: absolute;
                 bottom: -45px;
                 right: 0px;
-
+                z-index: 4;
 
                 width: 340px;
 
 
                 img {
                     width: 100%;
+                }
 
+                @include lg {
+                    width: 460px;
+                    bottom: -70px;
+                }
+
+                @include xl {
+                    width: 560px;
+
+                    bottom: -105px;
+                }
+
+                @include xxl {
+                    width: 640px;
+                    bottom: -125px;
+                }
+
+                @include dsm {
+                    width: 700px;
+                    right: -150px;
                 }
             }
 
@@ -106,11 +167,33 @@
                 right: 30px;
 
                 width: 300px;
+                z-index: 3;
 
 
                 img {
                     width: 100%;
 
+                }
+
+                @include lg {
+                    width: 630px;
+                    right: -90px;
+                    bottom: -100px;
+                }
+
+                @include xl {
+                    width: 700px;
+                }
+
+                @include xxl {
+                    width: 850px;
+                    right: -125px;
+                    bottom: -180px;
+                }
+
+                @include dsm {
+                    right: -270px;
+                    width: 900px;
                 }
             }
         }
@@ -133,7 +216,10 @@
             text-align: left;
             max-width: 400px;
 
+        }
 
+        @include lg {
+            max-width: 500px;
         }
 
 
@@ -165,10 +251,19 @@
             font-size: 4rem;
         }
 
+        @include lg {
+            font-size: 6.5rem;
+            line-height: 80px;
+        }
+
     }
 
     &__p {
         color: $desert-sand;
+
+        @include lg {
+            font-size: 2.0rem;
+        }
     }
 
 
