--- a/src/parts/head.pug
+++ b/src/parts/head.pug
@@ -1,6 +1,9 @@
 head
     title Restaurant Site
     link(rel='preconnect', href='https://fonts.googleapis.com')
+    meta(charset='UTF-8')
+    meta(http-equiv='X-UA-Compatible' content='IE=edge')
+    meta(name='viewport' content='width=device-width, initial-scale=1.0')
     link(rel='preconnect', href='https://fonts.gstatic.com', crossorigin='')
     link(href='https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css', rel='stylesheet')
     link(rel='preconnect' href='https://fonts.googleapis.com')
