next section finish

--- a/src/parts/content.pug
+++ b/src/parts/content.pug
@@ -98,21 +98,23 @@
                                  img(src='assets/img/sale-shape-red.png' alt='get up to 50% off now' class="scale-up-anim abs-img")
                     .about__text
                         .section__text-wrapper 
-                            h1.text-wrapper__title  Caferio, Burgers, and Best Pizzas 
-                            span in Town!
-                            p.text-wrapper__p The restaurants in Hangzhou also catered to many northern Chinese who had fled south from Kaifeng during the Jurchen invasion of the 1120s, while it is also known that many restaurants were run by families.
+                            h1.section__text-wrapper__title Caferio, Burgers, and Best Pizzas 
+                                 span in Town!
+                            p.section__text-wrapper__p The restaurants in Hangzhou also catered to many northern Chinese who had fled south from Kaifeng during the Jurchen invasion of the 1120s, while it is also known that many restaurants were run by families.
                         ul.about__table 
-                            li.table__item  
+                            li.about__item  
+                                i.ri-check-fill 
+                                p Delicious & Healthy Foods
+                            li.about__item  
                                 i.ri-check-fill 
                                 p Spacific Family And Kids Zone
-                            li.table__item  
-                                i.ri-check-fill 
-                                p Music & Other Facilities   
-                            li.table__item  
+   
+                            li.about__item  
                                 i.ri-check-fill
-                                p  Fastest Food Home Delivery
-                            li.table__item  
+                                p  Music & Other Facilities
+
+                            li.about__item  
                                 i.ri-check-fill 
-                                p Order Now   
+                                p Fastest Food Home Delivery 
                         .btn.btn--header
                             span Order Now           
