--- a/src/parts/header.pug
+++ b/src/parts/header.pug
@@ -13,7 +13,7 @@ header.header(data-header='')
                         .menu__item 
                             a(href="#about" data-nav-link="") About Us
                         .menu__item 
-                            a(href="$food-menu" data-nav-link="") Food Menu
+                            a(href="$food-menu" data-nav-link="") Shop
                         .menu__item 
                             a(href="#blog" data-nav-link="") Blog
                         .menu__item 
