dishes section finish

--- a/src/parts/content.pug
+++ b/src/parts/content.pug
@@ -118,3 +118,178 @@
                                 p Fastest Food Home Delivery 
                         .btn.btn--header
                             span Order Now           
+
+//Dishes Section
+
+.dishes 
+    .container 
+        .row 
+            .col-12.col-lg-12 
+                .dishes__content
+                    .section__text-wrapper 
+                            h3.section__text-wrapper__subtitle Popular Dishes
+                            h1.section__text-wrapper__title Our Delicious
+                                span Foods
+                            p.section__text-wrapper__p Food is any substance consumed to provide nutritional support for an organism.
+                    .dishes__buttons 
+                        .btn.btn--dishes.active 
+                             span All        
+                        .btn.btn--dishes  
+                             span Pizza     
+                        .btn.btn--dishes 
+                             span Burger    
+                        .btn.btn--dishes  
+                             span Drinks  
+                        .btn.btn--dishes  
+                             span Sandwitch 
+                    .dishes__wrapper         
+                        .dishes__card   
+                            .card__banner   
+                                .card__img 
+                                    img(src='assets/img/food-menu-1.png' alt='Burger with Drinks')
+                                .card__discount -15%   
+                                .btn.btn--menu
+                                    span Order Now 
+                            .card__wrapper 
+                                .wrapper__box-reating
+                                    h4.wrapper__name Chicken
+                                    .wrapper__rating 
+                                        i.ri-star-fill
+                                        i.ri-star-fill
+                                        i.ri-star-fill
+                                        i.ri-star-fill
+                                        i.ri-star-fill
+                                h2.wrapper__title Fried Chicken Unlimited    
+                                .wrapper__price 
+                                    .price__title PRICE:
+                                    .price__present $49.00
+                                    .price__out $69.00
+                        .dishes__card   
+                            .card__banner   
+                                .card__img 
+                                    img(src='assets/img/food-menu-2.png' alt='Burger with Drinks')
+                                .card__discount -10%   
+                                .btn.btn--menu
+                                    span Order Now 
+                            .card__wrapper 
+                                .wrapper__box-reating
+                                    h4.wrapper__name Noddles
+                                    .wrapper__rating 
+                                        i.ri-star-fill
+                                        i.ri-star-fill
+                                        i.ri-star-fill
+                                        i.ri-star-fill
+                                        i.ri-star-fill
+                                h2.wrapper__title Burger King Whopper    
+                                .wrapper__price 
+                                    .price__title PRICE:
+                                    .price__present $49.00
+                                    .price__out $69.00
+                        .dishes__card   
+                            .card__banner   
+                                .card__img 
+                                    img(src='assets/img/food-menu-3.png' alt='Burger with Drinks')
+                                .card__discount -25%   
+                                .btn.btn--menu
+                                    span Order Now 
+                            .card__wrapper 
+                                .wrapper__box-reating
+                                    h4.wrapper__name Pizzas
+                                    .wrapper__rating 
+                                        i.ri-star-fill
+                                        i.ri-star-fill
+                                        i.ri-star-fill
+                                        i.ri-star-fill
+                                        i.ri-star-fill
+                                h2.wrapper__title White Castle Pizzas    
+                                .wrapper__price 
+                                    .price__title PRICE:
+                                    .price__present $49.00
+                                    .price__out $69.00
+                        .dishes__card   
+                            .card__banner   
+                                .card__img 
+                                    img(src='assets/img/food-menu-4.png' alt='Burger with Drinks')
+                                .card__discount -15%   
+                                .btn.btn--menu
+                                    span Order Now 
+                            .card__wrapper 
+                                .wrapper__box-reating
+                                    h4.wrapper__name Burrito
+                                    .wrapper__rating 
+                                        i.ri-star-fill
+                                        i.ri-star-fill
+                                        i.ri-star-fill
+                                        i.ri-star-fill
+                                        i.ri-star-fill
+                                h2.wrapper__title Bell Burrito Supreme    
+                                .wrapper__price 
+                                    .price__title PRICE:
+                                    .price__present $49.00
+                                    .price__out $69.00
+                        .dishes__card   
+                            .card__banner   
+                                .card__img 
+                                    img(src='assets/img/food-menu-5.png' alt='Burger with Drinks')
+                                .card__discount -15%   
+                                .btn.btn--menu
+                                    span Order Now 
+                            .card__wrapper 
+                                .wrapper__box-reating
+                                    h4.wrapper__name Nuggets
+                                    .wrapper__rating 
+                                        i.ri-star-fill
+                                        i.ri-star-fill
+                                        i.ri-star-fill
+                                        i.ri-star-fill
+                                        i.ri-star-fill
+                                h2.wrapper__title Kung Pao Chicken BBQ    
+                                .wrapper__price 
+                                    .price__title PRICE:
+                                    .price__present $49.00
+                                    .price__out $69.00
+                        .dishes__card   
+                            .card__banner   
+                                .card__img 
+                                    img(src='assets/img/food-menu-6.png' alt='Burger with Drinks')
+                                .card__discount -15%   
+                                .btn.btn--menu
+                                    span Order Now 
+                            .card__wrapper 
+                                .wrapper__box-reating
+                                    h4.wrapper__name Chicken
+                                    .wrapper__rating 
+                                        i.ri-star-fill
+                                        i.ri-star-fill
+                                        i.ri-star-fill
+                                        i.ri-star-fill
+                                        i.ri-star-fill
+                                h2.wrapper__title Wendy's Chicken    
+                                .wrapper__price 
+                                    .price__title PRICE:
+                                    .price__present $49.00
+                                    .price__out $69.00
+
+
+                                        
+
+                                    
+
+                                        
+
+
+
+                                        
+
+                                    
+
+                                        
+
+
+
+                                        
+
+                                    
+
+                                        
+
