--- a/src/scss/components/_container.scss
+++ b/src/scss/components/_container.scss
@@ -69,7 +69,11 @@
     text-align: center;
     margin: 0 auto;
 
+    &__subtitle {
 
+        font-weight: $fw-500;
+        color: $cinnabar;
+    }
 
     &__title {
         font-weight: $fw-600;
@@ -89,6 +93,7 @@
         }
 
         span {
+            padding-left: 5px;
             color: $dark-orange;
         }
 
@@ -566,7 +571,7 @@
 
         @include lg {
             margin: 0;
-            gap: 80px;
+            justify-content: space-around;
 
 
 
@@ -588,11 +593,6 @@
         display: flex;
         position: relative;
         margin-bottom: 40px;
-
-
-
-
-
 
 
 
@@ -767,4 +767,279 @@
 
     }
 
+}
+
+
+
+/************************Section Dishes************************/
+/************************Section Dishes************************/
+/************************Section Dishes************************/
+
+
+.dishes {
+
+    background-color: #F9F6F0;
+
+    &__content {
+
+        display: flex;
+        flex-direction: column;
+        padding: 80px 0;
+
+
+
+
+
+        @include sm {
+            margin: 0 15px;
+        }
+
+        @include md {
+            margin: 0 20px;
+
+            gap: 20px;
+
+
+
+        }
+
+        @include lg {
+            margin: 0;
+            justify-content: space-around;
+
+
+
+
+        }
+
+
+        @include xl {
+
+            justify-content: space-between;
+
+
+        }
+
+
+    }
+
+
+    &__buttons {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 10px;
+        justify-content: center;
+        flex-direction: row;
+
+
+        margin: 40px 0;
+    }
+
+    &__wrapper {
+        display: flex;
+        flex-direction: column;
+
+        gap: 40px;
+
+
+        align-items: center;
+
+        @include md {
+            flex-direction: row;
+            flex-wrap: wrap;
+            justify-content: space-around;
+        }
+
+        @include lg {
+            justify-content: space-around;
+
+        }
+
+
+    }
+
+
+    &__card {
+
+        padding: 40px;
+
+        border: 1px solid black;
+
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+
+        background-color: $white;
+        box-shadow: var(--shadow-2);
+
+
+        @include sm {
+            width: 480px;
+        }
+
+        @include md {
+            width: 320px;
+        }
+
+        @include lg {
+            width: 364px;
+        }
+
+
+
+
+
+
+        position: relative;
+
+        &:hover {
+
+            .btn--menu {
+                opacity: 1;
+                transform: translate(0, -50%);
+                top: calc(50%);
+            }
+        }
+    }
+
+
+    .card {
+
+
+
+
+
+
+        &__banner {
+
+            position: relative;
+
+            margin-bottom: 20px;
+
+        }
+
+        &__img {
+
+            width: 280px;
+            height: 280px;
+
+            img {
+                object-fit: cover;
+                width: 100%;
+                height: 100%;
+            }
+        }
+
+        &__discount {
+            position: absolute;
+            top: -26px;
+            left: 0;
+            background-color: $cinnabar;
+            z-index: 2;
+
+
+
+            color: $white;
+            padding: 0 10px;
+        }
+
+
+        &__wrapper {
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+            align-items: center;
+        }
+
+
+
+
+    }
+
+
+    .wrapper {
+
+
+
+        &__box-reating {
+            display: flex;
+            gap: 20px;
+        }
+
+        &__name {
+            font-weight: $fw-500;
+        }
+
+        &__rating {
+            display: flex;
+            color: $deep-saffron;
+            gap: 5px;
+        }
+
+        &__title {
+            font-size: $fs-2;
+            font-weight: $fw-600;
+
+            color: $black;
+        }
+
+        &__price {
+            display: flex;
+            gap: 15px;
+        }
+
+
+    }
+
+
+    .price {
+
+        &__title {
+            color: $cinnabar;
+            font-weight: $fw-600;
+        }
+
+        &__out {
+            color: $spanish-gray;
+            font-weight: $fw-600;
+
+            position: relative;
+
+            &::after {
+                position: absolute;
+                content: '';
+                width: 120%;
+                height: 1px;
+                background-color: $spanish-gray;
+                left: -10%;
+                top: 50%;
+                transform: translateY(-50%);
+
+            }
+        }
+
+        &__present {
+            color: $deep-saffron;
+            font-weight: $fw-600;
+
+
+
+
+        }
+    }
+
+
+    .btn--menu {
+        position: absolute;
+        left: 20%;
+        top: calc(50% + 15px);
+
+
+        width: 168px;
+        display: flex;
+
+
+
+    }
 }
