cta section finish

--- a/src/parts/content.pug
+++ b/src/parts/content.pug
@@ -269,27 +269,24 @@
                                     .price__title PRICE:
                                     .price__present $49.00
                                     .price__out $69.00
+//Section CTA
+
+.cta
+    .container 
+        .row 
+            .col-12.col-lg-12 
+                .cta__content   
+                    .section__text-wrapper 
+                            h1.section__text-wrapper__title The Foodie Have Excellent Of
+                                span Quality Burgers!
+                            p.section__text-wrapper__p The restaurants in Hangzhou also catered to many northern Chinese who had fled south from Kaifeng during the Jurchen invasion of the 1120s, while it is also known that many restaurants were run by families.
+                            .btn.btn--header
+                                span Order Now     
+                    .cta__banner 
+                            .cta__img   
+                                 img(src='assets/img/cta-banner.png' alt='Burger with Drinks')
+                            .cta__wrapper 
+                                 img(src='assets/img/sale-shape.png' alt='get up to 50% off now' class="scale-up-anim abs-img")
 
 
-                                        
-
-                                    
-
-                                        
-
-
-
-                                        
-
-                                    
-
-                                        
-
-
-
-                                        
-
-                                    
-
-                                        
-
+                                 
