--- a/src/scss/components/_container.scss
+++ b/src/scss/components/_container.scss
@@ -116,6 +116,8 @@
 }
 
 
+
+
 /************************Section Hero************************/
 /************************Section Hero************************/
 /************************Section Hero************************/
@@ -1041,5 +1043,233 @@
 
 
 
+    }
+}
+
+
+/************************Section CTA************************/
+/************************Section CTA************************/
+/************************Section CTA************************/
+
+
+
+.cta:before,
+.cta::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 25px;
+    background-repeat: repeat no-repeat;
+    background-position: bottom;
+
+}
+
+
+
+.cta {
+
+    background-image: url('../img/hero-bg.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+
+
+    position: relative;
+
+
+    &:before,
+    &::after {
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 25px;
+        background-repeat: repeat no-repeat;
+
+
+    }
+
+
+    &::before {
+        top: 0;
+        background-image: url('../img/shape-white.png');
+        transform: scaleY(-1);
+    }
+
+
+    &::after {
+        bottom: 0;
+        background-image: url("../img/shape-grey.png");
+    }
+
+
+
+
+
+    &__content {
+
+        padding: 80px 0 0 0;
+
+
+        @include sm {
+            margin: 0 15px;
+        }
+
+        @include md {
+            display: flex;
+            margin: 0 20px;
+            flex-direction: row;
+
+        }
+
+        @include lg {
+            margin: 0;
+            justify-content: space-between;
+
+        }
+
+
+        @include xl {
+
+            justify-content: space-between;
+
+        }
+
+    }
+
+    .section__text-wrapper {
+
+        margin-bottom: 40px;
+
+
+
+
+        @include md {
+
+            align-self: flex-start;
+            align-items: flex-start;
+            text-align: left;
+
+            width: 50%;
+        }
+
+        @include lg {
+            align-self: center;
+        }
+
+
+
+
+        &__title {
+            max-width: unset;
+            margin-bottom: 20px;
+            color: $white;
+            font-size: 3rem;
+
+            @include md {
+                font-size: 3.2rem;
+
+
+            }
+
+            @include lg {
+                font-size: 4rem;
+                // width: 570px;
+
+            }
+
+
+
+        }
+
+        &__p {
+            color: $white;
+            margin-bottom: 20px;
+
+            @include sm {
+                align-self: center;
+
+            }
+
+            @include md {
+                align-self: unset;
+            }
+
+
+
+
+        }
+
+        .btn {
+            margin: 0 auto;
+
+            @include md {
+                margin: unset;
+            }
+        }
+
+
+    }
+
+    .cta__banner {
+
+        position: relative;
+        display: flex;
+
+        @include md {
+
+            width: 50%;
+            align-self: center;
+        }
+
+        @include lg {
+            width: unset;
+        }
+
+    }
+
+    .cta__img {
+
+        max-width: 610px;
+        max-height: 450px;
+
+
+
+
+
+
+
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: contain;
+
+        }
+    }
+
+    .cta__wrapper {
+        position: absolute;
+        top: 0%;
+        left: 10%;
+
+
+        @include md {
+            width: 140px;
+            height: 140px;
+        }
+
+
+
+        width: 220px;
+        height: 220px;
+
+
+
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
     }
 }
