--- a/src/parts/content.pug
+++ b/src/parts/content.pug
@@ -288,5 +288,23 @@
                             .cta__wrapper 
                                  img(src='assets/img/sale-shape.png' alt='get up to 50% off now' class="scale-up-anim abs-img")
 
+//Delivery Section
 
-                                 
+.delivery 
+    .container 
+        .row 
+            .col-12.col-lg-12 
+                .delivery__content 
+                    .section__text-wrapper 
+                            h1.section__text-wrapper__title
+                                | A Moments Of Delivered On 
+                                span Right Time 
+                                | &amp; Place
+                            p.section__text-wrapper__p The restaurants in Hangzhou also catered to many northern Chinese who had fled south from Kaifeng during the Jurchen invasion of the 1120s, while it is also known that many restaurants were run by families.
+                            .btn.btn--header
+                                span Order Now  
+                    .delivery__banner 
+                            .delivery__bg
+                                 img(src='assets/img/delivery-banner-bg.png' alt='' class="")            
+                            .delivery__img   
+                                 img(src='assets/img/delivery-boy.svg' alt='Burger with Drinks' data-delivery-boy="")
