--- a/src/scss/components/_container.scss
+++ b/src/scss/components/_container.scss
@@ -93,7 +93,7 @@
         }
 
         span {
-            padding-left: 5px;
+
             color: $dark-orange;
         }
 
@@ -608,9 +608,10 @@
             width: 100%;
             height: 100%;
 
-
-
-
+            @include md {
+                max-width: 420px;
+                max-height: 355px;
+            }
 
             max-width: 500px;
             max-height: 455px;
@@ -699,6 +700,10 @@
 
         margin-bottom: 10px;
 
+        @include md {
+            gap: 15px;
+        }
+
 
     }
 
@@ -780,7 +785,7 @@
 
 .dishes {
 
-    background-color: #F9F6F0;
+    background-color: #FFFFFF;
 
     &__content {
 
@@ -865,7 +870,6 @@
 
         padding: 40px;
 
-        border: 1px solid black;
 
         display: flex;
         flex-direction: column;
@@ -874,20 +878,6 @@
 
         background-color: $white;
         box-shadow: var(--shadow-2);
-
-
-        @include sm {
-            width: 480px;
-        }
-
-        @include md {
-            width: 320px;
-        }
-
-        @include lg {
-            width: 364px;
-        }
-
 
 
 
@@ -1076,6 +1066,8 @@
     background-position: center;
 
 
+
+
     position: relative;
 
 
@@ -1231,18 +1223,25 @@
 
     .cta__img {
 
-        max-width: 610px;
-        max-height: 450px;
+        max-width: 700px;
+        max-height: 637px;
+
+        @include lg {
+            transform: translate(60px, 20px);
+
+        }
 
 
 
 
+        @include xl {
+            transform: translate(120px, 20px);
+        }
 
 
 
         img {
             width: 100%;
-            height: 100%;
             object-fit: contain;
 
         }
@@ -1270,6 +1269,223 @@
             width: 100%;
             height: 100%;
             object-fit: cover;
+        }
+    }
+}
+
+
+/************************Section Delivery************************/
+/************************Section Delivery************************/
+/************************Section Delivery************************/
+
+
+.delivery {
+
+
+
+    &__content {
+
+        padding: 80px 0;
+
+
+        @include sm {
+            margin: 0 15px;
+        }
+
+        @include md {
+            display: flex;
+            margin: 0 20px;
+
+            flex-direction: row;
+
+
+
+        }
+
+        @include lg {
+            margin: 0;
+
+
+        }
+
+    }
+
+    .section__text-wrapper {
+
+        gap: 20px;
+
+
+
+
+        @include md {
+            width: 55%;
+            margin: unset;
+        }
+
+
+        @include xl {
+            align-self: center;
+        }
+
+
+
+        &__title {
+
+            text-align: left;
+            max-width: unset;
+
+            @include sm {
+                max-width: 350px;
+                margin: unset;
+
+
+            }
+
+            @include md {
+                max-width: 270px;
+            }
+
+            @include lg {
+                font-size: 4rem;
+                max-width: 330px;
+                line-height: 55px;
+            }
+
+            @include xl {
+                font-size: 4.2rem;
+                max-width: 470px;
+            }
+
+            span {
+                padding-left: unset;
+            }
+        }
+
+        &__p {
+            text-align: left;
+        }
+
+        margin-bottom: 40px;
+
+    }
+
+    .delivery__banner {
+        position: relative;
+        aspect-ratio: 1 / 0.86;
+
+
+
+
+        @include md {
+            width: 65%;
+        }
+
+
+
+    }
+
+    .delivery__img {
+        position: absolute;
+        top: 0;
+        left: 0;
+
+        width: 700px;
+        height: 602px;
+
+        @include sm {
+
+
+            img {
+                width: 60%;
+                height: 60%;
+            }
+
+            transform: translateX(100px);
+
+        }
+
+        @include md {
+
+            top: 40px;
+
+
+            img {
+                width: 45%;
+                height: 45%;
+            }
+
+            transform: translateX(140px);
+        }
+
+        @include lg {
+
+            top: 20px;
+
+
+            img {
+                width: 60%;
+                height: 60%;
+            }
+
+            transform: translateX(40px);
+        }
+
+        @include xl {
+
+
+
+            img {
+                width: 90%;
+                height: 90%;
+            }
+        }
+
+
+
+        object-fit: cover;
+
+        transform: translateX(-80px);
+        transition: $transition-2;
+
+        img {
+            width: 45%;
+            height: 45%;
+            object-fit: cover;
+        }
+
+    }
+
+    .delivery__bg {
+
+        max-width: 1000px;
+        max-height: 880px;
+
+
+        @include md {
+
+            transform: translateX(80px);
+        }
+
+
+        @include lg {
+            transform: translateX(0);
+        }
+
+
+        @include xl {
+            img {
+                width: 100%;
+                height: 100%;
+
+            }
+        }
+
+
+
+        img {
+            width: 85%;
+            height: 85%;
+
         }
     }
 }
