--- a/src/parts/content.pug
+++ b/src/parts/content.pug
@@ -308,3 +308,61 @@
                                  img(src='assets/img/delivery-banner-bg.png' alt='' class="")            
                             .delivery__img   
                                  img(src='assets/img/delivery-boy.svg' alt='Burger with Drinks' data-delivery-boy="")
+
+//Seccion Customers
+
+.customers 
+    .container 
+        .row 
+            .col-12.col-lg-12 
+                .customers__content
+                    .section__text-wrapper 
+                            h3.section__text-wrapper__subtitle Popular Dishes
+                            h1.section__text-wrapper__title Our Delicious
+                                span Foods
+                            p.section__text-wrapper__p Food is any substance consumed to provide nutritional support for an organism.
+                    .customers__wrapper.has-scrollbar  
+                        .customers__box 
+                            .box__header 
+                                .box__image 
+                                     img(src='assets/img/avatar-1.jpg' alt='' class="")     
+                                .box__text 
+                                    h3.box__title Robert William  
+                                    h4.box__subtitle CEO Kingfisher 
+                            p.box__p I would be lost without restaurant. I would like to personally thank you for your outstanding product."
+                            .wrapper__rating 
+                                        i.ri-star-fill
+                                        i.ri-star-fill
+                                        i.ri-star-fill
+                                        i.ri-star-fill
+                                        i.ri-star-fill
+                        .customers__box 
+                            .box__header 
+                                .box__image 
+                                     img(src='assets/img/avatar-2.jpg' alt='' class="")     
+                                .box__text 
+                                    h3.box__title Robert William  
+                                    h4.box__subtitle CEO Kingfisher 
+                            p.box__p I would be lost without restaurant. I would like to personally thank you for your outstanding product."
+                            .wrapper__rating 
+                                        i.ri-star-fill
+                                        i.ri-star-fill
+                                        i.ri-star-fill
+                                        i.ri-star-fill
+                                        i.ri-star-fill
+                        .customers__box 
+                            .box__header 
+                                .box__image 
+                                     img(src='assets/img/avatar-3.jpg' alt='' class="")     
+                                .box__text 
+                                    h3.box__title Robert William  
+                                    h4.box__subtitle CEO Kingfisher 
+                            p.box__p I would be lost without restaurant. I would like to personally thank you for your outstanding product."
+                            .wrapper__rating 
+                                        i.ri-star-fill
+                                        i.ri-star-fill
+                                        i.ri-star-fill
+                                        i.ri-star-fill
+                                        i.ri-star-fill
+                
+                
