work project gallery

--- a/src/parts/content.pug
+++ b/src/parts/content.pug
@@ -365,4 +365,45 @@
                                         i.ri-star-fill
                                         i.ri-star-fill
                 
-                
+
+
+//Section Gallery
+
+.gallery 
+    .container 
+        .row    
+            .col-12.col-lg-12 
+                .gallery__content 
+                    ul.gallery__banner
+                        li.banner-lg 
+                            .banner__wrapper
+                                    .banner__img 
+                                        img(src='assets/img/banner-1.jpg' alt='' class="")     
+                                    h2.banner__title Discount For Delicious Tasty Burgers!50% Off Now! Discount For Delicious Tasty Burgers!       
+                                    p.banner__text Sale off 50% only this week
+                                    .btn.btn--gallery
+                                        span order now
+                        li.banner-sm 
+                            .banner__wrapper
+                                    .banner__img 
+                                        img(src='assets/img/banner-2.jpg' alt='' class="")     
+                                    h2.banner__title Delicious Pizza    
+                                    p.banner__text 50% off Now
+                                    .btn.btn--gallery
+                                        span order now
+                        li.banner-sm 
+                            .banner__wrapper
+                                    .banner__img 
+                                        img(src='assets/img/banner-3.jpg' alt='' class="")     
+                                    h2.banner__title American Burgers     
+                                    p.banner__text 50% off Now
+                                    .btn.btn--gallery
+                                        span order now
+                        li.banner-md
+                            .banner__wrapper
+                                    .banner__img 
+                                        img(src='assets/img/banner-4.jpg' alt='' class="")     
+                                    h2.banner__title Tasty Buzzed Pizza       
+                                    p.banner__text Sale off 50% only this week
+                                    .btn.btn--gallery
+                                        span order now                               
