--- a/src/scss/components/_container.scss
+++ b/src/scss/components/_container.scss
@@ -1640,3 +1640,88 @@
     }
 
 }
+
+
+/************************Gallery Section************************/
+/************************Gallery Section************************/
+/************************Gallery Section************************/
+
+
+.gallery {
+
+    background-color: #F9F6F0;
+
+
+
+    &__content {
+        padding: 80px 0;
+
+
+
+        @include sm {
+            margin: 0 15px;
+        }
+
+        @include md {
+            margin: 0 20px;
+
+        }
+
+        @include lg {
+            margin: 0;
+
+        }
+
+
+    }
+
+    &__banner {
+        display: grid;
+        gap: 10px;
+    }
+
+    .banner-lg {
+        height: 430px;
+
+    }
+
+
+    .banner-md {
+        height: 240px;
+    }
+
+
+    .banner-sm {
+        height: 200px;
+    }
+
+
+    .banner {
+
+
+
+
+        &__img {
+
+            position: relative;
+            height: 100%;
+            box-shadow: $shadow-2;
+            overflow: hidden;
+
+            border: 1px solid black;
+
+
+            img {
+                width: 100%;
+                height: 100%;
+
+                background-color: $gainsboro;
+
+                object-fit: cover;
+                transform: scale(1);
+
+
+            }
+        }
+    }
+}
